chore(ci): update Cachix action and nixpkgs lock, improve update workflow
- Bump cachix/cachix-action from v15 to v16 in setup-nix action
- Update flake.lock to latest nixpkgs revision
- Add explicit flake input update step to update workflow
- Ensure package build and commit steps run only when updates occur

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -28,6 +28,9 @@ jobs:
         with:
           cachix-auth-token: ${{ secrets.CACHIX_AUTH_TOKEN }}
 
+      - name: Update flake inputs
+        run: nix flake update
+
       - name: Run package updates
         id: update
         run: |
@@ -40,11 +43,9 @@ jobs:
           fi
 
       - name: Build packages and push to Cachix
-        if: steps.update.outputs.has_changes == 'true'
         run: nix shell -f '<nixpkgs>' nix-build-uncached -c nix-build-uncached ci.nix -A cacheOutputs
 
       - name: Commit and push
-        if: steps.update.outputs.has_changes == 'true'
         run: |
           git add .
           git commit -S -m "chore: automated package updates"
