feat(z_ai-coding-helper): add npm package with auto-update support
- Add z_ai-coding-helper package (v0.0.7) using buildNpmPackage
- Implement npm auto-update in update-packages.sh for packages without
  public repositories
- Add conditional execution to CI workflow (skip build/commit when no changes)
- Remove devDependencies from package.json during build to prevent
  fetching unnecessary dev deps

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -43,9 +43,11 @@ jobs:
           fi
 
       - name: Build packages and push to Cachix
+        if: steps.update.outputs.has_changes == 'true'
         run: nix shell -f '<nixpkgs>' nix-build-uncached -c nix-build-uncached ci.nix -A cacheOutputs
 
       - name: Commit and push
+        if: steps.update.outputs.has_changes == 'true'
         run: |
           git add .
           git commit -S -m "chore: automated package updates"
